07/26/2005
----------
1. fix a typo error in log message in openwebmail-main.pl
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)
2. fix a typo error in receipt messaage in openwebmail-send.pl
   (thanks to tigeli, pasi.sjoholm.AT.tieto-x.fi for his fix)


06/24/2005
----------
1. fix a bug in mailfilter that folder filelock wasn't correctly released
   if dotfile lock was used.
2. hongkong holiday file update
   (thanks to faifai.AT.users.sourceforge.net)
3. Thai language and template files translation update
   (thanks to Atsawin Chaowanakritsanakul, joke.AT.nakhon.net)


06/15/2005
----------
1. fix a bug that delmail_ifquotahit option will delete newest mails
   if overquota, this bug was introduced since 20050308
   (reported by Yang Yao-Strong, ysyang.AT.visionnext.com)
2. folding the to, cc, bcc fields with length limit 330 so they won't
   violated the 998 limit (defined in rfc RFC 2822 2.2.3) after qp encoding


05/27/2005
----------
1. change language name to more official ones (language_area.encoding)
   zh_TW.Big5.utf8   -> zh_TW.utf8
   zh_CN.GB2312.utf8 -> zh_CN.utf8


05/22/2005
----------
1. mirror site change
   from http://openwebmail.kkellas.com.my
   to   http://openwebmail.opusplc.com
   (thanks to Ramli Mohd, meli.AT.opusplc.com)


05/12/2005
----------
1. Portuguese Brazil language and template files translation update
   (thanks to Julio Cesar Cunha, julio.AT.cnm.org.br)
2. fix a bug that openwebmail-tool.pl always say
   "operation is only available to root" in persistence mode
   (this bug is introduced by change 2 b 20050507)


05/10/2005
----------
1. new iconset: Default.Polish
   (thanks to Tomasz Wieckowski, t.wieckowski.AT.amp.edu.pl)
2. minor change to advsearch output layout


05/08/2005
----------
1. fix a bug that openwebmail-tool.pl --init will have db creation error
   (this is introduced by change 2 b in 20050507)
2. fix a bug that number in $) may be lost after being copied to and from
   a variable