@@ -1,5 +1,5 @@
 #
-# Open WebMail configuration file DEFAULT
+# OpenWebMail configuration file DEFAULT
 #
 # This is openwebmail.conf.default - a file full of useful variables that
 # you can set for the openwebmail system. You should not edit this file!
@@ -9,15 +9,16 @@
 #
 # Please refer to openwebmail.conf.help for description of each option
 #
-# ps: This file will be loaded only once if Open WebMail is running in
-#     persistent mode. To force Open WebMail reread this file, please do
+# ps: This file will be loaded only once if OpenWebMail is running in
+#     persistent mode. To force OpenWebMail reread this file, please do
 #
 #     touch openwebmail*pl
 #
 
-name			Open WebMail
-version			2.51
-releasedate		20050726
+name			OpenWebMail
+version			2.52
+releasedate		20060502
+revision		$Rev$
 
 ##############################################################################
 # host dependent configuration
